# zhclaw

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs  router.rs
src/channel/: feishu.rs  mod.rs  telegram.rs  types.rs
src/executor/: mod.rs  process_registry.rs
src/mcp/: mod.rs  timer_manager.rs
tests/: e2e_test.rs  executor_test.rs  mcp_test.rs  telegram_test.rs  timer_execution_test.rs
