[package]
name = "zhclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# Telegram Bot
teloxide = { version = "0.17", features = ["macros"] }

# MCP Server (Rust 官方 SDK) — Streamable HTTP 传输
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }

# HTTP 框架
axum = "0.8"

# Cron 调度
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 环境变量 / 配置
dotenvy = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1"
thiserror = "2"

# 异步 trait
async-trait = "0.1"

# 工具
uuid = { version = "1", features = ["v4"] }
shell-escape = "0.1"
shlex = "1.3"
libc = "0.2.183"
envy = "0.4.2"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
